# reapack-porter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  reapack_porter.lua
.github/workflows/: build-artifacts.yml  release.yml
docs/: RELEASING.md
docs/release-notes/: v0.1.0.md
src/reapack_porter/: __init__.py  bundles.py  cli.py  core.py  gui.py  gui_state.py  operations.py  paths.py  processes.py  settings.py  tooltip.py
tests/: test_build_release.py  test_build_workflow.py  test_bundles.py  test_cli.py  test_core.py  test_gui.py  test_open_path.py  test_operations.py  test_package_artifacts.py  test_packaging_entrypoints.py  test_paths.py  test_processes.py  test_release_documentation.py  test_release_workflow.py  test_resolver.py  test_settings.py  test_tooltip.py  test_verify_frozen_build.py
tools/: build_release.py  package_artifacts.py  verify_frozen_build.py
tools/pyinstaller/: cli_entry.py  gui_entry.py  reapack_porter_cli.spec  reapack_porter_gui.spec
