[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reapack-porter"
version = "0.1.0"
description = "Platform-independent core for ReaPack Porter"
requires-python = ">=3.10"

[project.scripts]
reapack-porter = "reapack_porter.cli:main"

[project.gui-scripts]
reapack-porter-gui = "reapack_porter.gui:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
build = [
  "PyInstaller>=6.19,<7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
